--- a/.github/workflows/first-action.yml
+++ b/.github/workflows/first-action.yml
@@ -5,6 +5,6 @@ jobs:
     runs-on: ubuntu-test
     steps:
       - name: Print greeting
-        run: echo "Hello world!"
+        run: echo "Say Hello world!"
       - name: Print goodbye
-        run: echo "Good bye!"
+        run: echo "Say Good bye!"
